--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "models",
   "version": "0.0.1",
   "description": "Models",
-  "main": "index.js",
+  "main": "dist/Models.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -22,12 +23,15 @@
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^3.2.2",
+    "eslint-loader": "^1.5.0",
+    "webpack": "^1.13.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.13.0",
     "babel-runtime": "^6.9.2",
-    "webpack": "^1.13.1"
+    "fbemitter": "^2.0.2"
   },
   "author": "Clinton Robinson",
   "license": "ISC",
