--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "models",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Models",
-  "main": "dist/Models.js",
+  "main": "src/Model.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
