--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "models",
-  "version": "0.0.3",
+  "version": "2.0.0",
   "description": "Models",
-  "main": "src/Model.js",
+  "main": "dist/Models.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
@@ -15,22 +15,23 @@
     "models",
     "orm",
     "javascript",
+    "immutable",
     "react"
   ],
   "devDependencies": {
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^3.2.2",
-    "eslint-loader": "^1.5.0",
-    "webpack": "^1.13.1"
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "eslint": "^3.16.0",
+    "eslint-loader": "^1.6.1",
+    "webpack": "^2.2.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.13.0",
-    "babel-runtime": "^6.9.2",
+    "babel-polyfill": "^6.23.0",
+    "babel-runtime": "^6.23.0",
     "fbemitter": "^2.1.1"
   },
   "author": "Clinton Robinson",
