--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "babel-preset-stage-0": "^6.22.0",
     "eslint": "^3.16.0",
     "eslint-loader": "^1.6.1",
+    "yargs": "^6.6.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
-    "babel-runtime": "^6.23.0",
-    "fbemitter": "^2.1.1"
+    "babel-runtime": "^6.23.0"
   },
   "author": "Clinton Robinson",
   "license": "ISC",
