--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-react-native": "^1.9.1",
     "babel-preset-stage-0": "^6.22.0",
     "eslint": "^3.16.0",
     "eslint-loader": "^1.6.1",
-    "yargs": "^6.6.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "yargs": "^6.6.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
