--- a/package.json
+++ b/package.json
@@ -20,20 +20,21 @@
   ],
   "devDependencies": {
     "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "babel-preset-react-native": "^1.9.1",
+    "babel-preset-react-native": "^4.0.0",
     "babel-preset-stage-0": "^6.22.0",
-    "eslint": "^3.16.0",
+    "eslint": "^4.7.1",
     "eslint-loader": "^1.6.1",
-    "webpack": "^2.2.1",
-    "yargs": "^6.6.0"
+    "webpack": "^3.6.0",
+    "yargs": "^9.0.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
-    "babel-runtime": "^6.23.0"
+    "babel-runtime": "^6.23.0",
+    "fbemitter": "^2.1.1"
   },
   "author": "Clinton Robinson",
   "license": "ISC",
