--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "models",
-  "version": "2.5.0",
+  "version": "2.7.0",
   "description": "Models",
   "main": "src/Models.js",
   "scripts": {
@@ -34,6 +34,7 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.23.0",
+    "es6-error": "^4.1.1",
     "fbemitter": "^2.1.1"
   },
   "author": "Clinton Robinson",
