--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "models",
-  "version": "2.10.0",
+  "version": "2.11.0",
   "description": "Models",
   "main": "src/Models.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --config webpack.js"
   },
   "repository": {
     "type": "git",
@@ -20,18 +20,21 @@
   ],
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.3",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-native": "^4.0.0",
     "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^4.17.0",
-    "eslint-loader": "^1.9.0",
-    "webpack": "^3.10.0",
+    "eslint": "^4.18.2",
+    "eslint-loader": "^2.0.0",
+    "uglifyjs-webpack-plugin": "^1.2.2",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.10",
     "yargs": "^11.0.0"
   },
   "dependencies": {
+    "babel-plugin-transform-es2015-function-name": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "es6-error": "^4.1.1",
